<resources>
    <string name="app_name">Asclepius</string>
    <string name="camera_x">CameraX</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Upload Gambar</string>
    <string name="analyze">Analisa</string>
    <string name="result">Hasil Analisis</string>
    <string name="image_classifier_failed">Image classifier has failed.</string>
    <string name="classification_failed">Classification has failed.</string>
    <string name="history">Riwayat Deteksi</string>
    <string name="deteksi_kanker">Deteksi Kanker</string>
    <string name="hasil_deteksi">Hasil Deteksi</string>
    <string name="riwayat_deteksi">Riwayat Deteksi</string>
    <string name="analisa_kanker">Analisa Kanker</string>
    <string name="hasil_deteksi_toolbar">Hasil Deteksi</string>
    <string name="riwayat_deteksi_toolbar">Riwayat Deteksi</string>
    <string name="berita_terkait">Berita Terkait</string>
</resources>